--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "hyperapp": "^0.9.3",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "babili-webpack-plugin": "^0.1.2",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "url-loader": "^0.5.9",
     "webpack-dev-server": "^2.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack --env production",
     "start": "webpack-dev-server --open"
   },
   "author": "",
